--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hablu Mama Funny Chatgpt 2.0 Version 😄</title>
+    <title> Chatgpt 2.0 Version 😄</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
      <div class="ProfileText">
       <h3><img src="trash.svg" alt=""> Conversation</h3>
       <h3><img src="lightning-charge-fill.svg" alt="">Light Mode</h3>
-      <h3><img src="discord.svg" alt="">Hablu Discord</h3>
+      <h3><img src="discord.svg" alt="">Ismail Discord</h3>
       <h3><img src="gear.svg" alt="">Settings</h3>
       <h3><img src="box-arrow-right.svg" alt="">Logout</h3>
      </div>
