--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -24,7 +24,7 @@
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows="1" cols="1" placeholder="Ask Hablu Mama For Fun"></textarea>
+        <textarea name="prompt" rows="1" cols="1" placeholder="Ask ChatGpt 2.0"></textarea>
         <button type="submit"><img src="img/send.svg" alt="send" />
       </form>
     </div>
